Changed package name

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: CustomDrops
 version: '${project.version}'
-main: dev.smelly.customdrops.CustomDrops
+main: dev.eli.customdrops.CustomDrops
 api-version: 1.17
 depend: [CustomItems]
 description: This plugin lets you define custom drops from various materials
